CSS: Fixed failed criteria on main page alignment

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -12,7 +12,7 @@ body {
 h1 {
    color: #fff; 
    text-shadow: 1px 1px 0 rgba(0,0,0,0.4);
-   padding-top: 30px;
+   padding-top: 80px;
    font-size: 100px; 
    font-weight: 700;
    text-align: center;
